--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "web scraping task ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/murali0101/web_scraping_task-#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "puppeteer": "^9.0.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.6"
